test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_condition_for_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  void
  identifier(foo)
  (
  void
  )
  {
  return
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(foo)
  (
  )
  ;
  )
  ;
  return
  const int(0)
  ;
  }
